@@ -85,24 +85,13 @@
      <include name="kawa/Version.java"/>
   </fileset>
   
-  <patternset id="build.selectjava">
-     <include name="gnu/bytecode/ObjectType.java"/>
-     <include name="gnu/math/RealNum.java"/>
-     <include name="gnu/lists/AbstractSequence.java"/>
-     <include name="gnu/lists/Convert.java"/>
-     <include name="gnu/lists/SeqPosition.java"/>
-     <include name="gnu/lists/Sequence.java"/>
-     <include name="gnu/lists/SimpleVector.java"/>
-     <include name="gnu/lists/FString.java"/>
-     <include name="gnu/lists/FVector.java"/>
-     <include name="gnu/lists/LList.java"/>
-     <include name="gnu/mapping/CallContext.java"/>
-     <include name="gnu/mapping/Symbol.java"/>
-     <include name="gnu/kawa/xml/Focus.java"/>
-     <include name="gnu/kawa/xml/ListItems.java"/>
-     <include name="gnu/kawa/xml/IteratorItems.java"/>
-     <include name="gnu/text/Char.java"/>
-  </patternset>
+  <fileset id="build.selectjava" dir="${src.dir}">
+     <include name="**/*.java"/>
+     <or>
+        <contains text="BEGIN JAVA" casesensitive="true"/>
+        <contains text="BEGIN JAXP" casesensitive="true"/>
+     </or>
+  </fileset>
 
   <target name="run" depends="classes">
      <java taskname="kawa" classname="kawa.repl" classpath="${build.classes}" />
@@ -239,49 +228,53 @@
   </target>
   
   <target name="select-java1" depends="build-tools">
-    <xcopy todir="${build.tmp}" overwrite="true">
- 	   <fileset dir="${src.dir}">
-       	 <patternset refid="build.selectjava"/>
-		 <!--
-			 <or>
-				 <contains text="BEGIN JAVA1"/>
-				 <contains text="BEGIN JAVA2"/>
-			 </or>
-	     -->
-      </fileset>
+    <delete dir="${build.tmp}/preprocess"/>
+    <mkdir dir="${build.tmp}/preprocess"/>
+    <xcopy todir="${build.tmp}/preprocess" overwrite="true">
+   	  <fileset refid="build.selectjava"/>
       <linecommenterset begintoken="/* " endtoken=" */" >
-        <linecommenter first="BEGIN JAVA2" last="END JAVA2" comment="true"/>
         <linecommenter first="BEGIN JAVA1" last="END JAVA1" comment="false"/>
+        <linecommenter first="BEGIN JAVA2" last="END JAVA2" comment="true"/>
+        <linecommenter first="BEGIN JAVA5" last="END JAVA5" comment="true"/>
+        <linecommenter first="BEGIN JAXP 1.3+" last="END JAXP 1.3+" comment="true"/>
       </linecommenterset>
     </xcopy>
     <copy todir="${build.preprocessed}">
-       <fileset dir="${build.tmp}">
-       	 <patternset refid="build.selectjava"/>
-       </fileset>          
+       <fileset dir="${build.tmp}/preprocess"/>
     </copy>
   </target>
   
   <target name="select-java2" depends="build-tools">
-    <mkdir dir="${build.tmp}"/>
-    <xcopy todir="${build.tmp}" overwrite="true">
- 	   <fileset dir="${src.dir}">
-       	 <patternset refid="build.selectjava"/>
-		 <!--
-			 <or>
-				 <contains text="BEGIN JAVA1"/>
-				 <contains text="BEGIN JAVA2"/>
-			 </or>
-	     -->
-      </fileset>
+    <delete dir="${build.tmp}/preprocess"/>
+    <mkdir dir="${build.tmp}/preprocess"/>
+    <xcopy todir="${build.tmp}/preprocess" overwrite="true">
+   	  <fileset refid="build.selectjava"/>
       <linecommenterset begintoken="/* " endtoken=" */" >
-        <linecommenter first="BEGIN JAVA2" last="END JAVA2" comment="false"/>
         <linecommenter first="BEGIN JAVA1" last="END JAVA1" comment="true"/>
+        <linecommenter first="BEGIN JAVA2" last="END JAVA2" comment="false"/>
+        <linecommenter first="BEGIN JAVA5" last="END JAVA5" comment="true"/>
+        <linecommenter first="BEGIN JAXP 1.3+" last="END JAXP 1.3+" comment="true"/>
       </linecommenterset>
     </xcopy>
     <copy todir="${build.preprocessed}">
-       <fileset dir="${build.tmp}">
-       	 <patternset refid="build.selectjava"/>
-       </fileset>          
+       <fileset dir="${build.tmp}/preprocess"/>
+    </copy>
+  </target>
+    
+  <target name="select-java5" depends="build-tools">
+    <delete dir="${build.tmp}/preprocess"/>
+    <mkdir dir="${build.tmp}/preprocess"/>
+    <xcopy todir="${build.tmp}/preprocess" overwrite="true">
+   	  <fileset refid="build.selectjava"/>
+      <linecommenterset begintoken="/* " endtoken=" */" >
+        <linecommenter first="BEGIN JAVA1" last="END JAVA1" comment="true"/>
+        <linecommenter first="BEGIN JAVA2" last="END JAVA2" comment="false"/>
+        <linecommenter first="BEGIN JAVA5" last="END JAVA5" comment="false"/>
+        <linecommenter first="BEGIN JAXP 1.3+" last="END JAXP 1.3+" comment="false"/>
+      </linecommenterset>
+    </xcopy>
+    <copy todir="${build.preprocessed}">
+       <fileset dir="${build.tmp}/preprocess"/>
     </copy>
   </target>
     
@@ -749,9 +742,6 @@
     <delete>
        <fileset refid="build.classes"/>
        <fileset refid="build.preprocessed"/>
-       <fileset dir="${build.tmp}">
-          <patternset refid="build.selectjava"/>
-       </fileset>
     </delete>
   </target>
 
